clusters/beryjuio-home/oxidized/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oxidized
  namespace: oxidized
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: oxidized
  template:
    metadata:
      labels:
        app.kubernetes.io/name: oxidized
        release: oxidized
    spec:
      containers:
        - name: oxidized
          image: proxy.registry.beryju.io/oxidized/oxidized
          imagePullPolicy: Always
          ports:
            - containerPort: 8888
              name: http
          resources:
            requests:
              cpu: 150m
              memory: "200Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          volumeMounts:
            - name: config
              mountPath: /home/oxidized/.config/oxidized/config
              subPath: config
            - name: devices
              mountPath: /config/devices
            - name: ssh
              mountPath: /home/oxidized/.ssh
            - name: state
              mountPath: /run/state
      volumes:
        - name: config
          configMap:
            name: oxidized-config
        - name: devices
          configMap:
            name: oxidized-devices
        - name: ssh
          secret:
            secretName: beryjuorg-oxidized
        - name: state
          persistentVolumeClaim:
            claimName: state
