clusters/beryjuio-home/oxidized/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oxidized
  namespace: oxidized
spec:
  ingressClassName: istio
  rules:
    - host: oxidized.${CLUSTER_NAME}.k8s.beryju.io
      http:
        paths:
          - backend:
              service:
                name: oxidized
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - oxidized.${CLUSTER_NAME}.k8s.beryju.io
      secretName: beryjuio-oxidized
